Fix image coverflow

--- a/src/public/css/site/images.css
+++ b/src/public/css/site/images.css
@@ -10,14 +10,25 @@ body {
     width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
+    overflow: hidden;
   }
   .swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 300px;
-    height: 300px;
+    /* width: 300px; */
+    height: 65vh;
+    -webkit-box-shadow: 10px 10px 22px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 22px -8px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 22px -8px rgba(0,0,0,0.75);
 
   }
   .swiper-wrapper{
     width: max-content;
+  }
+  .swiper-pagination-bullet.swiper-pagination-bullet-active{
+    background-color: #5429ff;
+  }
+  .swiper-pagination.swiper-pagination-bullets{
+    margin-top: 50px;
+    text-align: center;
   }
